# student-manager

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
data/: student.dat.template
include/: student.h
src/: main.c  student.c
